--- a/App/package.json
+++ b/App/package.json
@@ -7,22 +7,24 @@
   "private": true,
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@smite-timeline/smite-game-objects": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.16",
-    "@types/react": "^16.14.11",
-    "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.18",
-    "antd": "^4.16.7",
+    "@types/node": "^17.0.35",
+    "@types/react": "^16.14.26",
+    "@types/react-dom": "^16.9.16",
+    "@types/react-redux": "^7.1.24",
+    "antd": "^4.20.6",
     "axios": "^0.27.2",
+    "nth-check": "^2.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.8",
     "react-scripts": "^5.0.1",
+    "redux-thunk": "^2.4.1",
     "typescript": "^3.9.10"
   },
   "scripts": {
